# MagnumDaxa

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
cmake/: deps.cmake
src/: CMakeLists.txt  Print.hpp  main.cpp
